[gd_scene load_steps=46 format=2]

[ext_resource path="res://scenes/panels/core_panel/CorePanel.png" type="Texture" id=1]
[ext_resource path="res://scenes/panels/core_panel/CorePanel.gd" type="Script" id=2]
[ext_resource path="res://scenes/structures/core/Images/core_01.png" type="Texture" id=3]
[ext_resource path="res://scenes/structures/core/Images/core_02.png" type="Texture" id=4]
[ext_resource path="res://scenes/structures/core/Images/core_03.png" type="Texture" id=5]
[ext_resource path="res://scenes/structures/core/Images/core_04.png" type="Texture" id=6]
[ext_resource path="res://scenes/structures/core/Images/core_05.png" type="Texture" id=7]
[ext_resource path="res://scenes/structures/core/Images/core_06.png" type="Texture" id=8]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot_idle-0.png" type="Texture" id=9]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot-FX-Outline.png" type="Texture" id=10]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot_run_side_01.png" type="Texture" id=11]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot_run_side_02.png" type="Texture" id=12]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot_run_side_03.png" type="Texture" id=13]
[ext_resource path="res://scenes/actors/players/dorbot/images/Dorbot_run_side_04.png" type="Texture" id=14]
[ext_resource path="res://scenes/actors/players/dorbot/images/DorbotGray.png" type="Texture" id=15]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot_idle_01.png" type="Texture" id=16]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot-FX-Outline.png" type="Texture" id=17]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot_run_side_01.png" type="Texture" id=18]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot_run_side_02.png" type="Texture" id=19]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot_run_side_03.png" type="Texture" id=20]
[ext_resource path="res://scenes/actors/players/matbot/images/Matbot_run_side_04.png" type="Texture" id=21]
[ext_resource path="res://scenes/actors/players/matbot/images/MatbotGray.png" type="Texture" id=22]
[ext_resource path="res://scenes/actors/players/pixbot/images/Pixbot_idle_01.png" type="Texture" id=23]
[ext_resource path="res://scenes/actors/players/pixbot/images/Pixbot-FX-Outline.png" type="Texture" id=24]
[ext_resource path="res://scenes/actors/players/pixbot/images/Pixbot_run_side_01.png" type="Texture" id=25]
[ext_resource path="res://scenes/actors/players/pixbot/images/Pixbot_run_side_02.png" type="Texture" id=26]
[ext_resource path="res://scenes/actors/players/pixbot/images/Pixbot_run_side_03.png" type="Texture" id=27]
[ext_resource path="res://scenes/actors/players/pixbot/images/PixbotGray.png" type="Texture" id=28]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot_idle_01.png" type="Texture" id=29]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot-FX-Outline.png" type="Texture" id=30]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot_run_side_01.png" type="Texture" id=31]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot_run_side_02.png" type="Texture" id=32]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot_run_side_03.png" type="Texture" id=33]
[ext_resource path="res://scenes/actors/players/serbot/images/Serbot_run_side_04.png" type="Texture" id=34]
[ext_resource path="res://scenes/actors/players/serbot/images/SerbotGray.png" type="Texture" id=35]
[ext_resource path="res://scenes/buttons/panel_ok_button/PanelOKButton - normal.png" type="Texture" id=36]
[ext_resource path="res://scenes/buttons/panel_ok_button/PanelOKButton - pressed.png" type="Texture" id=37]
[ext_resource path="res://scenes/buttons/panel_ok_button/PanelOKButton - hover.png" type="Texture" id=38]
[ext_resource path="res://scenes/buttons/panel_ok_button/PanelOKButton - disabled.png" type="Texture" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="AnimatedTexture" id=2]
frames = 4
frame_0/texture = ExtResource( 11 )
frame_1/texture = ExtResource( 12 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 13 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 14 )
frame_3/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=3]
frames = 4
frame_0/texture = ExtResource( 18 )
frame_1/texture = ExtResource( 19 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 20 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/Pixbot_run_side_04.png-1ff1b7e3e2e20c0abba5b854cb1c7382.stex"

[sub_resource type="AnimatedTexture" id=5]
frames = 4
frame_0/texture = ExtResource( 25 )
frame_1/texture = ExtResource( 26 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 27 )
frame_2/delay_sec = 0.0
frame_3/texture = SubResource( 4 )
frame_3/delay_sec = 0.0

[sub_resource type="AnimatedTexture" id=6]
frames = 4
frame_0/texture = ExtResource( 31 )
frame_1/texture = ExtResource( 32 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 33 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 34 )
frame_3/delay_sec = 0.0

[node name="CorePanel" type="Sprite"]
position = Vector2( 111, 130 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CoreImg" type="AnimatedSprite" parent="."]
position = Vector2( 0, -35 )
frames = SubResource( 1 )
animation = "idle"

[node name="Grid" type="GridContainer" parent="."]
editor/display_folded = true
margin_left = -38.0
margin_top = -5.0
margin_right = 38.0
margin_bottom = 32.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4

[node name="Dorbot" type="TextureButton" parent="Grid"]
margin_right = 16.0
margin_bottom = 16.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = SubResource( 2 )
texture_disabled = ExtResource( 15 )

[node name="Matbot" type="TextureButton" parent="Grid"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = SubResource( 3 )
texture_disabled = ExtResource( 22 )

[node name="Pixbot" type="TextureButton" parent="Grid"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
texture_hover = SubResource( 5 )
texture_disabled = ExtResource( 28 )

[node name="Serbot" type="TextureButton" parent="Grid"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
disabled = true
toggle_mode = true
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = SubResource( 6 )
texture_disabled = ExtResource( 35 )

[node name="OkBots" type="TextureButton" parent="."]
margin_left = -19.0
margin_top = 16.0
margin_right = 19.0
margin_bottom = 26.0
disabled = true
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 38 )
texture_disabled = ExtResource( 39 )
[connection signal="pressed" from="OkBots" to="." method="_on_OkBots_pressed"]
